# ChangeLog for app-text/iso-codes
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/ChangeLog,v 1.56 2008/11/22 16:07:44 jer Exp $

  22 Nov 2008; Jeroen Roovers <jer@gentoo.org> iso-codes-3.3.ebuild:
  Stable for HPPA (bug #246056).

  12 Nov 2008; Brent Baude <ranger@gentoo.org> iso-codes-3.3.ebuild:
  stable ppc64, bug 246056

  09 Nov 2008; nixnut <nixnut@gentoo.org> iso-codes-3.3.ebuild:
  Stable on ppc wrt bug 246056

  09 Nov 2008; Markus Meier <maekke@gentoo.org> iso-codes-3.3.ebuild:
  amd64 stable, bug #246056

  08 Nov 2008; Raúl Porcel <armin76@gentoo.org> iso-codes-3.3.ebuild:
  alpha/arm/ia64/sh/x86 stable wrt #246056

  08 Nov 2008; Ferris McCormick <fmccor@gentoo.org> iso-codes-3.3.ebuild:
  Sparc stable, Bug #246056, no problems seen.

*iso-codes-3.3 (06 Oct 2008)

  06 Oct 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -iso-codes-0.58.ebuild, -iso-codes-1.5.ebuild, +iso-codes-3.3.ebuild:
  Version bump to 3.3.

  26 Sep 2008; Jeroen Roovers <jer@gentoo.org> iso-codes-3.2.ebuild:
  Stable for HPPA (bug #238185).

  21 Sep 2008; Raúl Porcel <armin76@gentoo.org> iso-codes-3.2.ebuild:
  alpha/arm/ia64/sh stable wrt #238185

  21 Sep 2008; Brent Baude <ranger@gentoo.org> iso-codes-3.2.ebuild:
  stable ppc64, bug 238185

  21 Sep 2008; nixnut <nixnut@gentoo.org> iso-codes-3.2.ebuild:
  Stable on ppc wrt bug 238185

  20 Sep 2008; Markus Meier <maekke@gentoo.org> iso-codes-3.2.ebuild:
  x86 stable, bug #238185

  20 Sep 2008; Thomas Anderson <gentoofan23@gentoo.org>
  iso-codes-3.2.ebuild:
  stable amd64, bug 238185

  20 Sep 2008; Ferris McCormick <fmccor@gentoo.org> iso-codes-3.2.ebuild:
  Sparc stable, Bug #238185.

*iso-codes-3.2 (03 Aug 2008)

  03 Aug 2008; Gilles Dartiguelongue <eva@gentoo.org> +iso-codes-3.2.ebuild:
  bump to 3.2

  19 Feb 2008; Gilles Dartiguelongue <eva@gentoo.org> iso-codes-0.58.ebuild,
  iso-codes-1.5.ebuild:
  add empty RDEPEND, fix bug #210508
