@@ -1,6 +1,8 @@
 DIST iso-codes-3.2.tar.bz2 5174682 RMD160 4442a659736e33be5dcbb11c0e9c0f6aa8e975b5 SHA1 c652fd683e76d7b78732ee216ad1308b1c564705 SHA256 edc4a000ed36c891069146193daf68bb453071dcb9aba7584cb5271d06aed6d3
 DIST iso-codes-3.3.tar.bz2 5177202 RMD160 0868f49557ef8d1216e69d70af589a645efe8513 SHA1 2f66b4e524fe4fc8bb9bac1bf2253fab8436034e SHA256 3bb9248963dc86e293cf2cb9b0092539c1606c9830c51ddc494297d8a5d5f41a
+DIST iso-codes-3.5.1.tar.bz2 5220212 RMD160 2fd0e9f0d010b82a3877c84a0ceeabc06ef9abb7 SHA1 dbaa594624e4286ef892206e33b2c622639c5703 SHA256 c390e918a43a67ce8c482c9dffb7929be836c8bff99b0c3b001ad44dde7319a3
 EBUILD iso-codes-3.2.ebuild 980 RMD160 96213e7d0f0cc7d48f9eb1ec6004004ac800b21f SHA1 c37e3f0ae77becc477777ab877e7ea06fd8379ee SHA256 bc04301346090b993d23a35bb92922e27e945b4c6636f05e85e00483c6b9aab9
 EBUILD iso-codes-3.3.ebuild 993 RMD160 9f61f6f4aab2279b2f2992fe780e9e3368128ab7 SHA1 5b694d42a531252bc231984b2be52dda8fc25fe7 SHA256 8c06110489fde5dba803af0199553635781e524fcf4194c998e5d3f55d17dd54
-MISC ChangeLog 7238 RMD160 27abcbc833c8b3bf1ca7e5624bc1444859fa40b8 SHA1 c4987ddf4549fd8be3697903b91f6816bbd7e7e6 SHA256 b5862e48077c99e364283e7d8c7f9f1dee2e3b7a6937540a0f57913f9aa562b4
+EBUILD iso-codes-3.5.1.ebuild 981 RMD160 36bc9dafb857471182574439ca4ad99adcd4c3d4 SHA1 c1d2301b1828540a97a8b8e8850ac51bcd5574a0 SHA256 172ea27d1d952e998b9aa19f1668699efdaa576cb48600c15a4a090c53a6adca
+MISC ChangeLog 7424 RMD160 2fc40f415b068da76307124b7ba6326376c0bfe6 SHA1 c335e37569bd41884c050a4cd56540335195aaea SHA256 f4bb9e49d40960273ce06b06395bfc5c73333bfb7f9b7d97be41609c99c8ff05
 MISC metadata.xml 387 RMD160 110fb26a8d959cfaa9ded0d5aaf4f3f26860eb66 SHA1 90b5f3b6d4b059b26db56f689f494a854b79f216 SHA256 d5252ca9dce95b72fa3153d212126bfa4594a1cf6868bff0dc205e46891a05e8
