@@ -1,6 +1,12 @@
 # ChangeLog for app-text/iso-codes
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/ChangeLog,v 1.56 2008/11/22 16:07:44 jer Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/ChangeLog,v 1.57 2009/01/18 21:53:13 eva Exp $
+
+*iso-codes-3.5.1 (18 Jan 2009)
+
+  18 Jan 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  +iso-codes-3.5.1.ebuild:
+  Bump to 3.5.1. Fix python xml module dependency problem, bug #233166.
 
   22 Nov 2008; Jeroen Roovers <jer@gentoo.org> iso-codes-3.3.ebuild:
   Stable for HPPA (bug #246056).
